--- a/sprayer.css
+++ b/sprayer.css
@@ -363,3 +363,64 @@ footer a:hover {
 .social-links a:hover {
     color: #004D40;
 }
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f9f9f9;
+}
+
+#avaliacoes {
+    padding: 40px 20px;
+    text-align: center;
+    background-color: #fff;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+#avaliacoes h2 {
+    font-size: 2em;
+    margin-bottom: 20px;
+    color: #333;
+}
+
+#reviews-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+}
+
+.review-card {
+    width: 300px;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    text-align: left;
+}
+
+.review-card h3 {
+    font-size: 1.2em;
+    margin-bottom: 10px;
+    color: #333;
+}
+
+.review-card p {
+    font-size: 0.9em;
+    color: #555;
+    line-height: 1.4;
+}
+
+.review-card .rating {
+    font-size: 1em;
+    color: #f39c12;
+    margin-bottom: 10px;
+}
+.botao-avalia-google {
+  margin-top: 20px; /* Ajuste esse valor conforme necessário */
+}
+#avaliacoes h2 {
+    color: #00796B;
+    font-weight: 600;
+    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
+}
